# embeddedDesktopRobot

./: .gitignore  README.md  flash.sh  gen_config.py  sdkconfig
components/lvgl/: lv_conf.h
control/: display.json  encoder.json  modeSelect.json  rgb.json  servo.json
control/images/: README.md  jpg_to_c.py
control/images/c/: emotion1.c  emotion2.c  emotion3.c  emotion4.c  resized-image.c
docs/: AGENTS.md  ARCHITECTURE.md  DEBUG_LOG.md  PROJECT_LOG.md  TUTORIAL.md
main/: CMakeLists.txt  app_config.h  event_broker.c  event_broker.h  lvgl_clock.c  lvgl_clock.h  main.c  voice_assets.c  voice_assets.h  voice_prompt.c  voice_prompt.h
main/audio_assets/: warning_too_close.pcm
main/hal/: hal_audio_out.c  hal_audio_out.h  hal_buzzer.c  hal_buzzer.h  hal_clock.c  hal_clock.h  hal_common.h  hal_ec11.c  hal_ec11.h  hal_gc9a01.h  hal_gc9a01_spi.c  hal_hcsr04.c  hal_hcsr04.h  hal_lcd1602.c  hal_lcd1602.h  hal_rgb.c  hal_rgb.h  hal_servo.c  hal_servo.h
main/net/: net_mqtt.c  net_mqtt.h  net_wifi.c  net_wifi.h
